tests/toylang/neg/001388_mutation.toylang
program a = { var a : bool if a then sleep; } .
